# PokeAPI

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose-web.yaml  docker-compose.yaml  pyproject.toml
src/: config.py  dependencies.py  main.py
src/api/: profile_router.py  user_router.py
src/application/common/: dtos.py  interfaces.py
src/application/features/profile/commands/create_profile/: command.py  handler.py
src/application/features/profile/commands/update_profile/: command.py  handler.py
src/application/features/profile/commands/upload_avatar/: command.py  handler.py
src/application/features/profile/queries/get_by_user/: dto.py  handler.py  query.py
src/application/features/user/commands/create_user/: command.py  events.py  handler.py
src/application/features/user/commands/login/: command.py  handler.py
src/application/features/user/queries/get_all_users/: dto.py  handler.py  query.py
src/application/features/user/queries/get_by_id/: dto.py  handler.py  query.py
src/application/features/user/queries/get_page_users/: handler.py  query.py
src/application/interfaces/: repositories.py
src/domain/: entities.py
src/infrustructure/: services.py
src/persistence/: database.py  repositories.py  tables.py
src/persistence/migrations/: env.py
src/persistence/migrations/versions/: 481280035ab5_initial.py
